infrastructure-configurations/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        -   name: frontend
            image: atasoy/frontend-tumchainbook:v1.7
            ports:
              -   containerPort: 3000
